--- a/quartz-gui/src/main/webapp/index.html
+++ b/quartz-gui/src/main/webapp/index.html
@@ -19,6 +19,7 @@
   <script src="js/angular/angular.js"></script>
   <script src="js/angular/angular-route.js"></script>
   <script src="js/angular/ui-bootstrap-tpls-0.11.0.js"></script>
+  <script src="js/angular/angular-resource.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
